/secured url is Secured with Spring Security and PostgreSQL Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/sswd
 
+spring.datasource.username=postgres
+
+spring.datasource.password=Ba12345678ba
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.jpa.show-sql=true
+
+#hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
