--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username=postgres
 
 spring.datasource.password=Ba12345678ba
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql=true
 
-#hibernate.jdbc.lob.non_contextual_creation=true
+hibernate.jdbc.lob.non_contextual_creation=true
 
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
