Designed Log Out Info Box

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Ba12345678ba
 
 spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 hibernate.jdbc.lob.non_contextual_creation=true
 
