--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,19 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.1.7.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
