--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <version>3.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
